--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 body{
     background-color: rgba(128, 128, 128, 0.334);
 }
+@media (min-width: 760px){
 #img-div{
     height: 700px;
     width: 1200px;
@@ -66,4 +67,70 @@ li .divide{
     width: 300px;
     margin: 20px auto;
     font-size: 1.2em;
+}
+}
+@media (max-width: 750px){
+    #img-div{
+        height: 350px;
+        width: 310px;
+        background-color: white;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2em;
+    }
+    #image{
+        margin-top: 20px;
+        max-width: 100%;
+        height: 300px;
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 2em;
+        display: block;
+    }
+    #img-caption{
+        font-weight: 600;
+        font-size: 1em;
+        text-align: center;
+    }
+    #title{
+        text-align: center;
+        font-weight: 800;
+        font-size: 2em;
+        padding-top: 20px;
+        text-transform: uppercase;
+    }
+    #p1{
+        text-align: center;
+        font-style: italic;
+    }
+    .border{
+        border-bottom: 1px solid #888989;
+        margin: 2px 0;
+    }
+    .info h3{
+        text-align: center;
+        font-weight: 600;
+        font-size: 1.4em;
+        margin: 20px 0;
+    }
+    li{
+        margin: 10px 0;
+        padding-right: 15px;
+    }
+    li .year{
+        font-weight: 600;
+        font-size: 1.2rem;
+        padding: 20px;
+    }
+    li .divide{
+        padding-left: 20px;
+        padding-right: 10px;
+    }
+    .footer{
+        width: 300px;
+        margin: 20px 0;
+        margin-left: 30px;
+        font-size: 1.2em;
+    }
 }
